@@ -1726,7 +1726,33 @@ ptp_get_property_name(PTPParams* params, uint16_t dpc)
 		{PTP_DPC_NIKON_LightMeter,	N_("NIKON Light Meter")},
 		{PTP_DPC_NIKON_ExposureAperatureLock(Read Only),
 			N_("NIKON Exposure Aperature Lock (Read Only)")},
-		{PTP_DPC_NIKON_MaximumShots,	N_("NIKON Maxium Shots")},	
+		{PTP_DPC_NIKON_MaximumShots,	N_("NIKON Maximum Shots")},
+                {PTP_DPC_NIKON_Beep, N_("AF Beep Mode")},
+                {PTP_DPC_NIKON_AFC, N_("??? AF Related")},
+                {PTP_DPC_NIKON_AFLampOff, N_("AF Lamp")},
+                {PTP_DPC_NIKON_PADVPMode, N_("Auto ISO P/A/DVP Setting")},
+                {PTP_DPC_NIKON_ReviewOff, N_("Image Review")},
+                {PTP_DPC_NIKON_GridDisplay, N_("Viewfinder Grid Display")},
+                {PTP_DPC_NIKON_AFAreaIllumination, N_("AF Area Illumination")},
+                {PTP_DPC_NIKON_FlashMode, N_("Flash Mode")},
+                {PTP_DPC_NIKON_FlashPower, N_("Flash Power")},
+                {PTP_DPC_NIKON_FlashSignOff, N_("Flash Sign")},
+                {PTP_DPC_NIKON_FlashExposureCompensation,
+			 N_("Flash Exposure Compensation")},
+                {PTP_DPC_NIKON_RemoteTimeout, N_("Remote Timeout")},
+                {PTP_DPC_NIKON_ImageCommentString, N_("Image Comment String")},
+                {PTP_DPC_NIKON_FlashOpen, N_("Flash Open")},
+                {PTP_DPC_NIKON_FlashCharged, N_("Flash Charged")},
+                {PTP_DPC_NIKON_LensID, N_("Lens ID")},
+                {PTP_DPC_NIKON_FocalLengthMin, N_("Min. Focal Length")},
+                {PTP_DPC_NIKON_FocalLengthMax, N_("Max. Focal Length")},
+                {PTP_DPC_NIKON_MaxApAtMinFocalLength,
+			 N_("Max. Aperture at Min. Focal Length")},
+                {PTP_DPC_NIKON_MaxApAtMaxFocalLength,
+			 N_("Max. Aperture at Max. Focal Length")},
+                {PTP_DPC_NIKON_LowLight, N_("Low Light")},
+                {PTP_DPC_NIKON_ExtendedCSMMenu, N_("Extended CSM Menu")},
+                {PTP_DPC_NIKON_OptimiseImage, N_("Optimise Image")},
 		{0,NULL}
 	};
 
